@@ -50,7 +50,7 @@ do
    echo "----------------------------------------------------------------------------"
    echo "   TAG: "$tag
    echo "----------------------------------------------------------------------------"
-   echo "   Doing: dq2-ls user."$GRIDUSER".*_v"$tag"_output.root/ >> tmp_dq2ls.txt"
+   echo "   Doing: dq2-ls user."$GRIDUSER".*"$tag"*_output.root/ >> tmp_dq2ls.txt"
    dq2-ls "user."$GRIDUSER".*_v"$tag"_output.root/" >> tmp_dq2ls.txt
    cat tmp_dq2ls.txt
    echo " "
